# simple-llm-assessment

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
app/llm_qa_app/: __init__.py  cli.py  providers.py  qa_app.py
app/rag_app/: __init__.py  rag_app.py
config/benchmarks/: mmlu.yaml  my_internal_qa.yaml
config/models/: ollama-llama3.yaml  vllm-qwen2-7b.yaml
config/suites/: baseline.yaml
data/eval_cases/: qa_sample.jsonl  rag_sample.jsonl
datasets/: my_internal_qa.json
docs/: APPENDIX.md  ARCHITECTURE.md  TESTING.md
docs/planning/plans/: 2026-05-09-deepeval-llm-assessment.md  2026-06-09-local-llm-evaluation-orchestrator.md  2026-06-14-aidd-document-conversion.md
docs/planning/specs/: 2026-05-09-deepeval-llm-assessment-design.md  2026-06-09-local-llm-evaluation-orchestrator-design.md  2026-06-14-existing-docs-conversion-notes.md
docs/product/: concept.md  diagram.md  domain-model.md  test-cases.md  test-plan.md  user-stories.md
docs/product/epics/: local-llm-evaluation-orchestrator.md
docs/product/specs/: cli-execution-results.md  configuration-models.md  runner-adapters.md  suite-planning.md
docs/superpowers/plans/: 2026-05-09-deepeval-llm-assessment.md
docs/superpowers/specs/: 2026-05-09-deepeval-llm-assessment-design.md
src/local_llm_eval/: __init__.py  cli.py  config.py  executor.py  planner.py  results.py
src/local_llm_eval/runners/: __init__.py  lm_evaluation_harness.py  opencompass.py
tests/: eval_reports.py  test_cli.py  test_config.py  test_eval_reports.py  test_executor.py  test_llm_eval.py  test_planner.py  test_project_structure.py  test_rag_app.py  test_rag_eval.py  test_runners.py
