[project]
name = "local-llm-eval"
version = "0.1.0"
description = "Local LLM evaluation orchestrator for lm-evaluation-harness and OpenCompass"
authors = [
    {name = "sakagami0615", email = "sakagami0615@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.scripts]
local-llm-eval = "local_llm_eval.cli:main"

[tool.poetry]
packages = [
    {include = "local_llm_eval", from = "src"},
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.poetry.group.eval.dependencies]
lm-eval = {version = ">=0.4.0", python = "<3.14"}
opencompass = {version = ">=0.5.0", python = "<3.14"}
datasets = {version = ">=2.0.0", python = "<3.14"}

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
